--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -17,12 +17,9 @@ jobs:
     - name: Run rubocop
       shell: bash
       run: |
-          which ruby
-          which gem
-          gem install rubocop -v 1.50
-          gem install rubocop-sketchup
+          bundle install
           cd plugin
-          rubocop -f extension_review -o report.html
+          bundle exec rubocop -f extension_review -o report.html
 
     - name: Upload rubocop results as artifact
       if: ${{ always() }}
